worklog 추가 및 README 수정

--- a/docs/2025-09-01.md
+++ b/docs/2025-09-01.md
@@ -1,3 +1,9 @@
 ### 2025-09-01 작업
 rag-engine
-- index 처리
+- PDF 파일 로드 : PDFPlumberLoader 도입
+  - 참고자료 : [PDF 한글 텍스트 추출 실험](https://velog.io/@autorag/PDF-%ED%95%9C%EA%B8%80-%ED%85%8D%EC%8A%A4%ED%8A%B8-%EC%B6%94%EC%B6%9C-%EC%8B%A4%ED%97%98#%EC%B4%9D%ED%8F%89)
+  - 공시자료(정기보고서)는 표와 레이아웃이 많은 문서이므로, 표와 같은 구조화된 데이터 추출에 특화되어 있는 PDFPlumberLoader 라이브러리를 사용.
+- Chunking
+  - 참고자료: [Langchain ParentDocumentRetriever](https://python.langchain.com/api_reference/langchain/retrievers/langchain.retrievers.parent_document_retriever.ParentDocumentRetriever.html#)
+  - 공시자료가 200p 정도로 방대한 양이라서 상위검색기 방식을 사용하여 청킹 및 임베딩, vector DB 저장을 진행
+- 파이프라인은 LangGraph로 지정.
